--- a/COMMPort/COMMPort.csproj
+++ b/COMMPort/COMMPort.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Harry.LabCOMMPort</RootNamespace>
     <AssemblyName>COMMPort</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,21 +33,78 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Management.Instrumentation" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="COMMBasePort\COMMBasePort.cs" />
+    <Compile Include="COMMBasePort\COMMBasePortPlus.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="COMMBasePort\COMMBasePortPlus.Designer.cs">
+      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="COMMBasePort\COMMWatcherPort.cs" />
     <Compile Include="COMMSerialPort\COMMSerialPort.cs" />
+    <Compile Include="COMMSerialPort\COMMSerialPortPlus.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="COMMSerialPort\COMMSerialPortPlus.Designer.cs">
+      <DependentUpon>COMMSerialPortPlus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="COMMSerialPort\COMMSerialPortPlusFull.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="COMMSerialPort\COMMSerialPortPlusFull.Designer.cs">
+      <DependentUpon>COMMSerialPortPlusFull.cs</DependentUpon>
+    </Compile>
     <Compile Include="COMMUSBPort\COMMUSBPort.cs" />
+    <Compile Include="COMMUSBPort\COMMUSBPortPlus.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="COMMUSBPort\COMMUSBPortPlus.Designer.cs">
+      <DependentUpon>COMMUSBPortPlus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\UserControlPlus\UserControlPlus.csproj">
+      <Project>{E54A51A6-A054-4F21-AC22-A827B5EF4D36}</Project>
+      <Name>UserControlPlus</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="COMMBasePort\COMMBasePortPlus.resx">
+      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="COMMSerialPort\COMMSerialPortPlusFull.resx">
+      <DependentUpon>COMMSerialPortPlusFull.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="COMMBasePort\Resources\error.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="COMMBasePort\Resources\lost.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="COMMBasePort\Resources\open.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
