--- a/UserControlPlus/UserControlPlus.csproj
+++ b/UserControlPlus/UserControlPlus.csproj
@@ -43,48 +43,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="COMMPortPlus\COMMBasePortPlus\COMMBasePortPlus.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="PanelPlus\PanelPlus.cs">
+      <SubType>Component</SubType>
     </Compile>
-    <Compile Include="COMMPortPlus\COMMBasePortPlus\COMMBasePortPlus.Designer.cs">
-      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
+    <Compile Include="PanelPlus\PanelPlus.Designer.cs">
+      <DependentUpon>PanelPlus.cs</DependentUpon>
     </Compile>
-    <Compile Include="COMMPortPlus\COMMSerialPortPlus\COMMSerialPortPlus.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="CheckedListBoxPlus\CheckedListBoxEx.cs">
+      <SubType>Component</SubType>
     </Compile>
-    <Compile Include="COMMPortPlus\COMMUSBPortPlus\COMMUSBPortPlus.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="ComboBoxPlus\ComboBoxEx.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ContextMenuPlus\ContextMenuPlus.cs" />
     <Compile Include="MessageBoxPlus\MessageBoxPlus.cs" />
     <Compile Include="MessageBoxPlus\MessageBoxPlusHelp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="RichTextBoxPlus\RichTextBoxEx.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="RichTextBoxPlus\RichTextBoxPlus.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="COMMPortPlus\Resources\error.png" />
-    <Content Include="COMMPortPlus\Resources\lost.png" />
-    <Content Include="COMMPortPlus\Resources\open.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="COMMPortPlus\COMMBasePortPlus\COMMBasePortPlus.resx">
-      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="COMMPortPlus\COMMSerialPortPlus\COMMSerialPortPlus.resx">
-      <DependentUpon>COMMSerialPortPlus.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <ProjectReference Include="..\WinAPI\WinAPI.csproj">
+      <Project>{b928595d-a068-47d0-9d31-89d592258d32}</Project>
+      <Name>WinAPI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
