使用resx资源文件，修改窗体的语言

--- a/COMMPort/COMMPort.csproj
+++ b/COMMPort/COMMPort.csproj
@@ -85,7 +85,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="COMMBasePort\COMMBasePortPlus.en.resx">
+      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="COMMBasePort\COMMBasePortPlus.ja.resx">
+      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="COMMBasePort\COMMBasePortPlus.resx">
+      <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="COMMBasePort\COMMBasePortPlus.zh.resx">
       <DependentUpon>COMMBasePortPlus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="COMMSerialPort\COMMSerialPortPlusFull.resx">
