规划合理，能够自动识别设备的插入和移除

--- a/EmbeddedProcessForm/EmbeddedProcessForm.csproj
+++ b/EmbeddedProcessForm/EmbeddedProcessForm.csproj
@@ -42,7 +42,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WinAPI">
@@ -85,6 +84,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NPlot\NPlot.csproj">
+      <Project>{e4b99177-77a3-4c92-b881-a6cb57e3bf89}</Project>
+      <Name>NPlot</Name>
+    </ProjectReference>
     <ProjectReference Include="..\UserControlPlus\UserControlPlus.csproj">
       <Project>{E54A51A6-A054-4F21-AC22-A827B5EF4D36}</Project>
       <Name>UserControlPlus</Name>
